--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: Node_js
 node_js:
-  -12
+  nvm install -12
 before_install:
-  -npm install
-  -export NODE_ENV=production
+  - npm install
+  - export NODE_ENV=production
 script:
-  -npm test
+  - npm test
