--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "mocha --recursive --exit --timeout 10000",
-    "box":"nodemon ./bin/www"
-
+    "box": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -18,6 +17,7 @@
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.0.1",
     "mongoose": "^5.9.21",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
